# now-playing

./: .gitignore  Cargo.toml  README.md  git-cliff.toml
.cargo/: config.toml
.github/workflows/: build-and-upload-release-artifacts.yml  ci.yml  create-release-on-tag.yml  draft-release.yml
assets/: default_template.html  template_wrapper.html
build-scripts/: Entitlements.plist  Info.plist.template  README.md  build-all.sh  build-linux.sh  build-macos.sh  build-windows.ps1  build-windows.sh  create-windows-msi.ps1
src/: apple_music.rs  cider_client.rs  config.rs  lib.rs  main.rs  music_service.rs  obs_client.rs  rt.rs  spotify.rs  template.rs  webserver.rs
