[package]
name = "now-playing"
version = "0.1.0"
edition = "2021"

[lib]
name = "now_playing"
crate-type = ["rlib"]

[[bin]]
name = "now-playing"
path = "src/main.rs"

[dependencies]
# GUI
eframe = "0.33"
egui = "0.33"

# Web server
warp = "0.3.7"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-stream = "0.3"
futures = "0.3"
rust_socketio = "0.6"

# OBS WebSocket
obws = "0.14.0"

# Configuration
directories = "6.0.0"
toml = "0.9.8"

# Templating
regex = "1.10"
base64 = "0.22"

# Utilities
open = "5.0"

# AppleScript execution helpers
once_cell = "1.19"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
rfd = "0.15.4"

# Spotify OAuth + HTTP client
oauth2 = { version = "4.0", features = ["reqwest"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tiny_http = "0.12"
url = "2.4"

[profile.release]
# Optimize for size and performance
strip = false
panic = "abort"
lto = true
codegen-units = 1
